RESOLVED FIXED302155
[blocks-in-inline] fast/inline/continuation-with-anon-wrappers.html fails
https://bugs.webkit.org/show_bug.cgi?id=302155
Summary [blocks-in-inline] fast/inline/continuation-with-anon-wrappers.html fails
Antti Koivisto
Reported 2025-11-07 06:07:24 PST
We need to split some anon tables on mutation.
Attachments
Radar WebKit Bug Importer
Comment 1 2025-11-07 06:07:48 PST
Antti Koivisto
Comment 2 2025-11-07 06:17:28 PST
EWS
Comment 3 2025-11-07 07:37:40 PST
Committed 302725@main (119afc56994d): <https://commits.webkit.org/302725@main> Reviewed commits have been landed. Closing PR #53587 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.