[blocks-in-inline] fast/inline/continuation-with-anon-wrappers.html fails https://bugs.webkit.org/show_bug.cgi?id=302155 rdar://164251236

Reviewed by Alan Baradlay.

Test: fast/inline/blocks-in-inline-split-table.html
* LayoutTests/fast/inline/blocks-in-inline-split-table-expected.html: Added.
* LayoutTests/fast/inline/blocks-in-inline-split-table.html: Added.
* Source/WebCore/rendering/updating/RenderTreeBuilder.cpp:
(WebCore::RenderTreeBuilder::splitAnonymousBoxesAroundChild):

Parent is no longer always a block.

(WebCore::RenderTreeBuilder::markBoxForRelayoutAfterSplit):
* Source/WebCore/rendering/updating/RenderTreeBuilder.h:
* Source/WebCore/rendering/updating/RenderTreeBuilderInline.cpp:
(WebCore::RenderTreeBuilder::Inline::attachIgnoringContinuation):

With blocks-in-inline beforeChild may be inside an anonymous block that needs to be split.
Call splitAnonymousBoxesAroundChild if needed.

Canonical link: https://commits.webkit.org/302725@main